# captains_log

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TASKS.md  state.rs
.continue/rules/: review.md
journals/: 2025-11-21-20-38-34-190.json  2025-11-21-20-38-50-517.json
src/: journal.rs  lib.rs  main.rs  monitor.rs  state.rs  ui.rs
tests/: journal_tests.rs
