[package]
name = "captains_log"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.27"
crossterm = "0.27"
rdev = "0.5"
tui-textarea = "0.4"
evdev = "0.12"
glob = "0.3"

[dev-dependencies]
tempfile = "3.23.0"
